--- a/gallery-popup.html
+++ b/gallery-popup.html
@@ -1,4 +1,3 @@
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
@@ -8,17 +7,33 @@
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
     background-color: #fff;
 }
+#titles {
+  width:100%;
+  text-align: center;
+}
+
+#title-picture {
+  object-fit:cover; /*use object-fit:cover or object-fit:contain depeding if you want to scale up or down*/
+  max-width:365px;
+  max-height:365px; 
+  width: 100%;
+  height: 100%;
+}
+@media only screen and (max-width: 767px) and (min-width: 480px) { 
+  #title-picture { width: 33.333333%; height: 33.333333vw; }
+}
+@media only screen and (max-width: 479px) {
+  #title-picture { width: 66.666667%; max-height: 66.666667vw; }
+}
 </style>
 
-
-<!--use object-fit:cover or object-fit:contain depeding if you want to scale up or down-->
-<div style="width:100%; text-align: center;">
-  <a href="#popup01" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="https://i.imgur.com/6doNu2m.png" style="width:225px;height:225px;object-fit:cover;"></a>
-  <a href="#popup02" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="https://i.imgur.com/joeQZQB.jpg" style="width:225px;height:225px;object-fit:cover;"></a>
-  <a href="#popup02" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="https://i.imgur.com/joeQZQB.jpg" style="width:225px;height:225px;object-fit:contain;"></a>
-  <a href="#popup03" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="https://i.imgur.com/tZWPCaU.png" style="width:225px;height:225px;object-fit:cover;"></a>
-  <a href="#popup04" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="https://i.imgur.com/9v7jIC6.png" style="width:225px;height:225px;object-fit:cover;"></a>
-  <a href="#popup05" data-rel="popup" data-position-to="window" data-transition="fade"><img class="popphoto" src="https://i.imgur.com/C52crU9.png" style="width:238px;height:238px;object-fit:cover;"></a>
+<div id=titles>
+  <a href="#popup01" data-rel="popup" data-position-to="window" data-transition="fade"><img id=title-picture class="popphoto" src="https://i.imgur.com/6doNu2m.png"></a>
+  <a href="#popup02" data-rel="popup" data-position-to="window" data-transition="fade"><img id=title-picture class="popphoto" src="https://i.imgur.com/joeQZQB.jpg"></a>
+  <a href="#popup02" data-rel="popup" data-position-to="window" data-transition="fade"><img id=title-picture class="popphoto" src="https://i.imgur.com/joeQZQB.jpg"></a>
+  <a href="#popup03" data-rel="popup" data-position-to="window" data-transition="fade"><img id=title-picture class="popphoto" src="https://i.imgur.com/tZWPCaU.png"></a>
+  <a href="#popup04" data-rel="popup" data-position-to="window" data-transition="fade"><img id=title-picture class="popphoto" src="https://i.imgur.com/9v7jIC6.png"></a>
+  <a href="#popup05" data-rel="popup" data-position-to="window" data-transition="fade"><img id=title-picture class="popphoto" src="https://i.imgur.com/C52crU9.png"></a>
 </div>
 
 <div data-role="popup" id="popup01" data-overlay-theme="b" data-theme="b" data-corners="false">
@@ -36,3 +51,4 @@
 <div data-role="popup" id="popup05" data-overlay-theme="b" data-theme="b" data-corners="false">
     <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" src="https://i.imgur.com/C52crU9.png" style="max-height:900px;max-width:900px">
 </div>
+
