--- a/gallery-popup.html
+++ b/gallery-popup.html
@@ -7,23 +7,36 @@
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper {
     background-color: #fff;
 }
+.ui-btn {
+  width: 50%;
+}
+.ui-body-b {
+  text-align: -webkit-center;
+}
 #titles {
   width:100%;
   text-align: center;
 }
-
 #title-picture {
   object-fit:cover; /*use object-fit:cover or object-fit:contain depeding if you want to scale up or down*/
   max-width:365px;
   max-height:365px; 
   width: 100%;
-  height: 100%;
+  height: 100vw;
+}
+#picture-popup {
+  /*max-width:100%;*/
+  max-height:900px;
+  max-width:900px
+  text-align: center;
 }
 @media only screen and (max-width: 767px) and (min-width: 480px) { 
   #title-picture { width: 33.333333%; height: 33.333333vw; }
+  #picture-popup { }
 }
 @media only screen and (max-width: 479px) {
   #title-picture { width: 66.666667%; max-height: 66.666667vw; }
+  #picture-popup { width: 100%; }
 }
 </style>
 
@@ -37,18 +50,17 @@
 </div>
 
 <div data-role="popup" id="popup01" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" src="https://i.imgur.com/6doNu2m.png" style="max-height:900px;max-width:900px">
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" id=picture-popup src="https://i.imgur.com/6doNu2m.png">
 </div>
 <div data-role="popup" id="popup02" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" src="https://i.imgur.com/joeQZQB.jpg" style="max-height:900px;max-width:900px">
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" id=picture-popup src="https://i.imgur.com/joeQZQB.jpg">
 </div>
 <div data-role="popup" id="popup03" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" src="https://i.imgur.com/tZWPCaU.png" style="max-height:900px;max-width:900px">
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" id=picture-popup src="https://i.imgur.com/tZWPCaU.png">
 </div>
 <div data-role="popup" id="popup04" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" src="https://i.imgur.com/9v7jIC6.png" style="max-height:900px;max-width:900px">
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" id=picture-popup src="https://i.imgur.com/9v7jIC6.png">
 </div>
 <div data-role="popup" id="popup05" data-overlay-theme="b" data-theme="b" data-corners="false">
-    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" src="https://i.imgur.com/C52crU9.png" style="max-height:900px;max-width:900px">
+    <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a">Close</a><img class="popphoto" id=picture-popup src="https://i.imgur.com/C52crU9.png">
 </div>
-
